# volunteer-hours

./: .gitmodules  README.md  pyproject.toml  requirements.txt  startup.sh
.github/workflows/: azure_clock.yml  azure_lyn-clock.yml  azure_lynclock.yml
volunteer_hours/: __init__.py  app.py
volunteer_hours/api/: ragic.py
volunteer_hours/common/: enums.py  member.py  timenow.py
volunteer_hours/logger/: __init__.py  pkg_logger.py
volunteer_hours/static/css/: style.css
volunteer_hours/templates/: action.html  index.html  sent.html
