[tool.poetry]
name = "volunteer_hours"
version = "1.0.0"
description = ""
authors = ["Jacky Lee <jla524@sfu.ca>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.3"
requests = "^2.27.1"
python-dotenv = "^0.19.2"
colorama = "^0.4.4"
colorlog = "^6.6.0"
pytz = "^2022.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
